# paperclip-company

./: .gitignore  COMPANY_PLAN.md  CONSTITUTION.md  MONEY_AUTOMATION_IDEAS.md  README.md  _analyze.py  _autonomy_driver.py  agent-detail.json  analyze.py  api-issues.json  autonomy-loop.py  c82.json  changelog.md  company-report.md  fetch_assets.py  generate_v2_docs.py  grant.bat  iss.json  issues.json  m6_payload.json  parse.py  parse_issues.py  pc_issues.json  pc_patch.py  push_all_v2.py  republish_all_v2.py  run-server-fixed.bat  run-server.bat  setup-db.bat  start-pc-now.sh  start-pc.sh  tasks.md  update_moltbook_drafts_v2.py  watchdog-cj.txt  watchdog.py  watchdog.sh
.scratch/: pre85_comment.md
artifacts/: HERMES-ENGINEER-VERIFICATION-2026-07-14.md  PRE-11-outreach-monitor.md  PRE-17-launch-teaser-posts.md  PRE-17-launch-tracker.md  PRE-17-pricing-page.html  PRE-3-monetization-plan.md  PRE-6-agent-labor-service-pricing.md  PRE-8-free-board-outreach-kit.md  PRE79-comment.txt  PRE89-comment.txt  post_comment.js  post_comment_v2.js  pre3-comment.md  pre3-interaction.json  pre3-patch.json  (+1 more)
clawhub-studio/: API.md  ARCHITECTURE.md  README.md  SKILL.md  pyproject.toml
clawhub-studio/.github/workflows/: ci.yml
clawhub-studio/studio/: __init__.py  __main__.py  auth.py  db.py  publish.py  server.py  skills.py  testrunner.py  workspace.py
clawhub-studio/tests/: __init__.py  test_backend.py  test_server.py  test_skills.py  test_testrunner.py  test_workspace.py
clawhub-studio/tmpikdjy9wv/: .studio_secret
clawhub-studio/web/: app.js  index.html  styles.css
(+366 files in other folders)
